# QtTiffTagViewer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tagview-ci-mingw.yml  tagview-ci-msvc.yml  tagview-ci-ubuntu.yml  tagview-ci.yml
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  src.pro  tifffile.cpp  tifffile.h
